--- a/src/css/components/menu.css
+++ b/src/css/components/menu.css
@@ -12,6 +12,7 @@ On ajoute les propriétés "visibility: hidden" et "opacity: 0" pour masquer le 
   transition: all 0.4s ease-in-out; /* Définit une transition de 0.4 secondes pour toutes les propriétés, avec un effet d'accélération et de décélération : https://developer.mozilla.org/fr/docs/Web/CSS/transition */
   opacity: 0; /* Rend le menu complètement transparent : https://developer.mozilla.org/fr/docs/Web/CSS/opacity */
   visibility: hidden; /* Cache le menu en le rendant invisible : https://developer.mozilla.org/fr/docs/Web/CSS/visibility#hidden  */
+  padding-left: 30px; /* Ajoute un espacement à gauche pour décaler le contenu vers la droite */
 }
 /* On se sert de Javascript pour gérer l'ouverture et la fermeture du menu avec l'attribut "aria-hidden" */
 .menu[aria-hidden="false"] {
@@ -37,6 +38,7 @@ On ajoute les propriétés "visibility: hidden" et "opacity: 0" pour masquer le 
   border: none; /* Supprime la bordure par défaut du bouton */
   cursor: pointer; /* Change le curseur en pointeur lors du survol du bouton */
   padding: 0; /* Supprime le padding par défaut du bouton */
+  margin-left: 20px; /* Décale le bouton vers la droite */
 }
 /*
   "aria-expanded" géré par JavaScript pour l'ouverture et la fermeture.
