--- a/src/css/components/menu.css
+++ b/src/css/components/menu.css
@@ -50,8 +50,8 @@ On ajoute les propriétés "visibility: hidden" et "opacity: 0" pour masquer le 
 }
 
 .menu__link {
-  text-decoration: none;
-  color: #333;
+  text-decoration: underline;
+  color: #000000;
   border-radius: px;
   transition: background-color 0.25s ease, color 0.25s ease, transform 0.25s ease, box-shadow 0.25s ease;
 }
