--- a/src/css/components/menu.css
+++ b/src/css/components/menu.css
@@ -4,6 +4,10 @@ On ajoute les propriétés "visibility: hidden" et "opacity: 0" pour masquer le 
 .menu {
   position: fixed; /* Fixe le menu en position, il ne défilera pas avec la page : https://developer.mozilla.org/fr/docs/Web/CSS/position#fixed */
   background-color: #ffffff; /* Définit la couleur de fond du menu en blanc : https://developer.mozilla.org/fr/docs/Web/CSS/background-color */
+  background-image: url('/TP-Pracht_12-11.avif');
+  background-size: cover;
+  background-position: center 0;
+  background-repeat: no-repeat;
   display: flex; /* Utilise Flexbox pour la mise en page des éléments enfants : https://developer.mozilla.org/fr/docs/Web/CSS/display-inside#flex */
   top: 0; /* Positionne le menu en haut de la page : https://developer.mozilla.org/fr/docs/Web/CSS/top */
   bottom: 0; /* Étend le menu jusqu'en bas de la page */
@@ -12,7 +16,6 @@ On ajoute les propriétés "visibility: hidden" et "opacity: 0" pour masquer le 
   transition: all 0.4s ease-in-out; /* Définit une transition de 0.4 secondes pour toutes les propriétés, avec un effet d'accélération et de décélération : https://developer.mozilla.org/fr/docs/Web/CSS/transition */
   opacity: 0; /* Rend le menu complètement transparent : https://developer.mozilla.org/fr/docs/Web/CSS/opacity */
   visibility: hidden; /* Cache le menu en le rendant invisible : https://developer.mozilla.org/fr/docs/Web/CSS/visibility#hidden  */
-  padding-left: 30px; /* Ajoute un espacement à gauche pour décaler le contenu vers la droite */
 }
 /* On se sert de Javascript pour gérer l'ouverture et la fermeture du menu avec l'attribut "aria-hidden" */
 .menu[aria-hidden="false"] {
@@ -38,7 +41,6 @@ On ajoute les propriétés "visibility: hidden" et "opacity: 0" pour masquer le 
   border: none; /* Supprime la bordure par défaut du bouton */
   cursor: pointer; /* Change le curseur en pointeur lors du survol du bouton */
   padding: 0; /* Supprime le padding par défaut du bouton */
-  margin-left: 20px; /* Décale le bouton vers la droite */
 }
 /*
   "aria-expanded" géré par JavaScript pour l'ouverture et la fermeture.
@@ -50,8 +52,8 @@ On ajoute les propriétés "visibility: hidden" et "opacity: 0" pour masquer le 
 }
 
 .menu__link {
-  text-decoration: underline;
-  color: #000000;
+  text-decoration: none;
+  color: #333;
   border-radius: px;
   transition: background-color 0.25s ease, color 0.25s ease, transform 0.25s ease, box-shadow 0.25s ease;
 }
